test/mutation_analysis/s0415_add_strings/hafis/o3/mutants/24/result.txt
./test/mutation_analysis/s0415_add_strings/hafis/o3/mutants/24/Solution.java:34: error: unreachable statement
        return result.reverse().toString();
        ^
1 error
